# Winhacks10

./: CMakeLists.txt  Project.hpp  converter.cpp  main.cpp
Reference/: main.cpp
assets/coal/: copperIngot.aseprite
assets/conveyor/corner/cornerDown/: cornerDownt.aseprite
assets/conveyor/corner/cornerUp/: cornerUpt.aseprite
assets/conveyor/vertical/: cornerUpt.aseprite  verticalStraight.aseprite
assets/copper/: copperIngot.aseprite
assets/crafter/: crafter.aseprite
assets/extractor/: extractor.aseprite
assets/iron/: ironIngot.aseprite
assets/storage/: storage.aseprite
config/: config.json
libs/CMake/: optimization.cmake
libs/TXLib/: txgraphics.hpp  txjson.hpp  txlib.hpp  txmap.hpp  txmath.hpp  txutility.hpp
src/: Project.hpp  main.cpp
